# agent-council

./: .gitignore  AGENTS.md  LICENSE  README.md  agent-council  config.toml  pyproject.toml  start.py
design/: council-evolution-plan.md  council-runtime-design.md
tests/: test_agent_profiles.py  test_cards.py  test_channel_broker.py  test_channel_claims.py  test_channel_db.py  test_channel_e2e_broker.py  test_channel_git_ops.py  test_channel_mcp_shim.py  test_channel_protocol.py  test_channel_ws_client.py  test_council_config.py  test_decide.py  test_peer_down.py  test_pingpong.py  test_relay.py  test_tmux_council.py  test_viewer_commands.py
warroom/: cards.py  relay.py
warroom/apps/: _alt.py  _server.py  claude.py  codex.py
warroom/channel/: agent_profiles.py  broker.py  broker_server.py  cli.py  council_config.py  council_prompt.py  db.py  git_ops.py  mcp_shim.py  protocol.py  tmux_council.py  viewer.py  ws_client.py
warroom/channel/web/: index.html
warroom/executors/: echo_relay.py
warroom/scripts/: ping.py
